<resources>
    <string name="edit_limit">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM~!@#$%^*()_+|`,.:?/\[]{}</string>
    <string name="edit_limit_joinClass">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="regist_inputRealName">请先输入真实姓名！</string>
    <string name="regist_inputPhoneNumber">请先输入手机号码！</string>
    <string name="regist_inputPhoneCode">请先输入5位数验证码！</string>
    <string name="regist_inputPassWord">请输入6-16位数的登录密码！</string>
    <string name="regist_registFaile">注册失败，请重新操作！</string>
    <string name="regist_title">用户注册</string>
    <string name="verification_getCode">获取验证码</string>
    <string name="verification_getCode_voice">获取语音验证码</string>
    <string name="verification_num">s后重发</string>
    <string name="passWord_verfiyCodeIdTure">请输入5位数的验证码</string>
    <string name="passWord_passWord">请设置6-20位的新密码</string>
    <string name="passWord_inputPhoneNumber">请先输入手机号码！</string>
    <string name="login_userName">请先输入账号</string>
    <string name="login_pwd">请先输入登录密码</string>
    <string name="getVersionInfo_fail">获取版本信息失败</string>
    <string name="agreement_hi">《HI同学用户服务协议》</string>
    <string name="app_name">嗨同学</string>
    <string name="foot_message">消息</string>
    <string name="foot_hiworld">Hi圈</string>
    <string name="foot_find">发现</string>
    <string name="foot_my">我的</string>
    <string name="login">登 录</string>
    <string name="foegetPassword">忘记密码？</string>
    <string name="registUser">新用户？立即注册</string>
    <string name="account">账号手机</string>
    <string name="password">密码</string>
    <string name="next">下一步</string>
    <string name="regist">注册</string>
    <string name="findpassword">找回密码</string>
    <string name="personaldata">个人资料</string>
    <string name="warn_text">家长账号的密码的找回,请通过学生账号重置密码。</string>
    <string name="warn_text_readbook">
        要求：挑选一本自己最喜欢的书并撰写读后感，小学生不少于500字，中学生不小于800字，教师及家长不小于1000字，题材不限，题目自拟，读书心得的标题必须注明所读图书的书名。请认真查阅首页的活动步骤及要求，如有不符合活动要求的作品，将被删除。
    </string>
    <string name="friendAction">好友动态</string>
    <string name="classAction">班级动态</string>
    <string name="myAction">与我相关</string>
    <string name="msminfo">我们已发送验证码到你的手机</string>
    <string name="findHiBa" translatable="false">Hi吧</string>
    <string name="seck">会话</string>
    <string name="joinPop">如约参加活动也是一种美德，请尽量保证准时参加!</string>
    <string name="comment">回复</string>
    <string name="offical_url">http://www.hitongx.com</string>
    <string name="offical_phone">0571-89712287</string>
    <string name="skip">跳过</string>
    <string name="newPerson_01">新手指导(1/3)</string>
    <string name="newPerson_02">新手指导(2/3)</string>
    <string name="newPerson_03">新手指导(3/3)</string>
    <string name="createClass">创建班级</string>
    <string name="createClass_02">创建班级(2/3)</string>
    <string name="createClass_03">创建班级(3/3)</string>
    <string name="join_class">加入班级</string>
    <string name="accountSafe">账号安全</string>
    <string name="pwdSet">密码设置</string>
    <string name="phoneSet">原手机号</string>
    <string name="emailSafe">密保邮箱</string>
    <string name="checkOldPwd">修改密码</string>
    <string name="oldPwd">原密码</string>
    <string name="accountSafeHint_00">请输入修改前的密码</string>
    <string name="accountSafeTip_00">为了保证你当前的数据安全，进行修改密码操作前系统需先验证原密码！</string>
    <string name="check">验证</string>
    <string name="cancel">取消</string>
    <string name="completed">完成</string>
    <string name="setPwd">设置密码</string>
    <string name="inputOldPwd">请输入原密码</string>
    <string name="inputNewPwd">请输入新密码</string>
    <string name="inputNewPwdAgain">请再次输入新密码</string>
    <string name="inputPhoneCode">请输入手机号码</string>
    <string name="inputCheckCode">请输入验证码</string>
    <string name="PwdNoCommon">两次密码不一致</string>
    <string name="setPwdSucceed">设置密码成功</string>
    <string name="exchangePhoneSucceed">修改密保手成功</string>
    <string name="exchangeEmailSucceed">修改密保邮箱成功</string>
    <string name="setPhoneSucceed">设置密保手成功</string>
    <string name="setEmailSucceed">设置密保邮箱成功</string>
    <string name="accountSafeHint_01">请输入设置的新密码</string>
    <string name="accountSafeHint_02">请再次输入新密码</string>
    <string name="accountSafeTip_01">设置密码完成后可以用绑定的安全手机和邮箱登录，通过验证的手机号和邮箱都可作为登录的用户名。</string>
    <string name="safeCheck">验证原手机号</string>
    <string name="checkCode">验证码</string>
    <string name="accountSafeHint_03">请输入短信验证码</string>
    <string name="sendCheckCode">发送验证码</string>
    <string name="accountSafeTip_02">为了保证你当前的数据安全，修改密保手机前，系统需要先验证原密保手机。</string>
    <string name="phoneCode">密保手机</string>
    <string name="emailCode">密保邮箱</string>
    <string name="setPhoneCode">设置密保手机</string>
    <string name="newPhoneCode">新密保手机</string>
    <string name="newEmailCode">新密保邮箱</string>
    <string name="setEmailCode">设置密保邮箱</string>
    <string name="exchangePhoneCode">更换手机</string>
    <string name="exchangeEmailCode">更换新邮箱</string>
    <string name="accountSafeHint_04">请输入新邮箱</string>
    <string name="accountSafeHint_05">请输入邮箱验证码</string>
    <string name="accountSafeTip_03">为了保证你当前的数据安全，修改密保邮箱前，系统需要先验证原密保手机。</string>
    <string name="have_no_classNotice">暂无公告，如有公告，请及时添加！</string>
    <string name="have_no_classActions">该班级还没来得及发布任何动态！</string>
    <string name="have_no_classLogs">该班级还没来得及发布任何日志！</string>
    <string name="have_no_classPictures">还没有上传过任何照片！</string>
    <string name="have_no_persionActions">这位同学太忙了\n\r还没来得及发布任何动态！</string>
    <string name="have_no_persionLogs">这位同学太忙了\n\r还没来得及发布任何日志！</string>
    <string name="have_no_persionEssay">这位同学太忙了\n\r还没来得及发布任何随记！</string>
    <string name="have_no_action">还没有动态！</string>
    <string name="have_no_offical">暂无数据哦！</string>
    <string name="have_no_issue">暂无评论，抢占沙发</string>
    <string name="location_init_map_error">初始化地图服务失败</string>
    <string name="location_navigate">导航</string>
    <string name="self_location">我在这个位置</string>
    <string name="location_unable_to_get_you">暂时无法获取您的位置</string>
    <string name="location_loading">正在定位</string>
    <string name="location_map">地图定位</string>
    <string name="my_location">我的位置</string>
    <string name="location_address_unkown">该位置信息暂无</string>
    <string name="format_mylocation">我的位置：%s</string>
    <string name="location_address_fail">获取位置信息失败</string>
    <string name="tools_selected">选择工具</string>
    <string name="friends_map_navigation_web">在网页中打开</string>
    <string name="location_open_map_error">打开地图出错</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="input_account">请输入帐号，限20位字母或者数字</string>
    <string name="input_nickname">请输入昵称，限10位汉字、字母或者数字</string>
    <string name="logout">注销</string>
    <string name="upload_text">上传</string>
    <string name="download_text">下载</string>
    <string name="input_panel_guess">猜 拳</string>
    <string name="input_panel_notice">发通知</string>
    <string name="input_panel_work">发作业</string>
    <string name="input_panel_activity">发起活动</string>
    <string name="input_panel_audio_call">语音通话</string>
    <string name="input_panel_video_call">视频通话</string>
    <string name="input_panel_file">发送文件</string>
    <string name="input_panel_RTS">白 板</string>
    <string name="input_panel_snapchat">阅后即焚</string>
    <string name="input_panel_tip">Tip</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_search_title">搜索本地消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="message_info">聊天信息</string>
    <string name="add_friend">加为好友</string>
    <string name="remove_friend">删除好友</string>
    <string name="begin_chat">聊天</string>
    <string name="create_normal_team">创建讨论组</string>
    <string name="team_search_hint">请输入群号进行搜索</string>
    <string name="team_number_not_exist">群号不存在</string>
    <string name="team_join">加入群组</string>
    <string name="team_join_success">成功加入群: %1$s</string>
    <string name="team_apply_to_join_send_success">申请已发出</string>
    <string name="has_exist_in_team">已经在群里</string>
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>
    <string name="nrtc_setting_vie_crop_ratio_key">nrtc_setting_vie_crop_ratio_key</string>
    <string name="nrtc_setting_vie_crop_ratio">画面裁剪比例</string>
    <string name="nrtc_setting_voe_high_quality_key">nrtc_setting_voe_high_quality_key</string>
    <string name="nrtc_setting_voe_dtx_key">nrtc_setting_voe_dtx_key</string>
    <string name="start_session">正在邀请对方，请稍后</string>
    <string name="callee_reject">对方拒绝了本次请求</string>
    <string name="callee_ack_timeout">对方未接受请求</string>
    <string name="receive_session">对方发起白板演示</string>
    <string name="start_session_record">我发起了白板演示</string>
    <string name="session_end_record">白板演示已结束</string>
    <string name="end_session_tip_head">退出白板演示</string>
    <string name="end_session_tip_content">退出后，你将不再接收白板演示的消息内容</string>
    <string name="target_has_end_session">对方结束白板演示</string>
    <string name="accept_session">接受</string>
    <string name="reject_session">拒绝</string>
    <string name="doodle_back">上一步</string>
    <string name="doodle_clear">清屏</string>
    <string name="community_type">社群分类</string>
    <string name="community_next">下一步</string>
    <string name="community_create">创建社群</string>
    <string name="community_company">机构名称</string>
    <string name="community_name">真实姓名</string>
    <string name="community_school">所属学校</string>
    <string name="community_person">负责人姓名</string>
    <string name="community_sign">人今天签到</string>
    <string name="community_permission">公开</string>
    <string name="community_tag">二级分类</string>
    <string name="msg_notice">消息提醒</string>
    <string name="no_disturb_tips">在设定的时间段内云信消息将不再提醒</string>
    <string name="time_from">从</string>
    <string name="time_to">至</string>
    <string name="time_from_default">22:00</string>
    <string name="time_to_default">08:00</string>
    <string name="multiport_logout">下线</string>
    <string name="computer_version">云信电脑版</string>
    <string name="birthday">生 日</string>
    <string name="icon_localtion">\ue904</string>
    <string name="icon_add2">\ue967</string>
    <string name="icon_img2">\ue968</string>
    <string name="icon_topic7">\ue97c</string>
    <string name="icon_chooseclass">\ue9a3</string>
    <string name="icon_badge">\ue9d7</string>
    <string name="icon_scan">\ue63b</string>
    <string name="write_log">写日志</string>
    <string name="read_book">阅读书籍</string>
    <string name="read_page">阅读页码</string>
    <string name="read_start_page">起始页</string>
    <string name="read_end_page">结束页</string>
    <string name="read_book_total_time">阅读时长</string>
    <string name="read_book_time_min">分钟</string>
    <string name="record_read_book_feel">记录你此刻的读书心得...</string>
    <string name="location">杭州市祥园路......</string>
    <string name="photo_or_video">照片或视频</string>
    <string name="from_album_get">从相册中获取</string>
    <string name="shoot">拍摄</string>
    <string name="publish_essay">发随记</string>
    <string name="upload_photo">传照片</string>
    <string name="dynamic_all">全部动态</string>
    <string name="dynamic_essay">随记动态</string>
    <string name="dynamic_log">日志动态</string>
    <string name="dynamic_photo">照片动态</string>
    <string name="dynamic_activity">活动动态</string>
</resources>