<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:background="@color/bg_black"
        android:orientation="vertical"/>


    <View
        style="@style/split_line_style"
        android:layout_width="match_parent"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp12"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_modify_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dynamic_all"
                android:textColor="@color/_333333"
                android:textSize="@dimen/sp15"/>

            <com.histudent.jwsoft.histudent.commen.view.IconView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginLeft="@dimen/dp8"
                android:text="@string/icon_badge"
                android:textSize="@dimen/sp8"/>

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    <View
        style="@style/split_line_style"
        android:layout_width="match_parent"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp12"
            android:layout_marginRight="@dimen/dp12"
            android:layout_marginTop="@dimen/dp20"
            android:orientation="horizontal">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_dynamic_all"
                    style="@style/dynamic_check_box"
                    android:gravity="center"
                    android:text="@string/dynamic_all"/>

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_dynamic_essay"
                    style="@style/dynamic_check_box"
                    android:gravity="center"
                    android:text="@string/dynamic_essay"/>

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_dynamic_log"
                    style="@style/dynamic_check_box"
                    android:gravity="center"
                    android:text="@string/dynamic_log"/>

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_dynamic_photo"
                    style="@style/dynamic_check_box"
                    android:gravity="center"
                    android:text="@string/dynamic_photo"/>

            </android.support.v7.widget.LinearLayoutCompat>


        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_dynamic_activity"
            style="@style/dynamic_check_box"
            android:layout_marginLeft="@dimen/dp12"
            android:layout_marginTop="@dimen/dp20"
            android:gravity="center"
            android:text="@string/dynamic_activity"/>


    </android.support.v7.widget.LinearLayoutCompat>

    <LinearLayout
        android:id="@+id/ll_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/bg_black"
        android:orientation="vertical"/>


</android.support.v7.widget.LinearLayoutCompat>